k8s/security/30-networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: cleaning
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
