k8s/security/32-networkpolicy-allow-internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gateway-to-backends
  namespace: cleaning
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - user-service
          - booking-service
          - payment-service
          - worker-service
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api-gateway
      ports:
        - protocol: TCP
          port: 5000
        - protocol: TCP
          port: 8000
        - protocol: TCP
          port: 3000
